--- a/.gitignore
+++ b/.gitignore
@@ -741,3 +741,4 @@ $RECYCLE.BIN/
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/csharp,rider,visualstudio,visualstudiocode,linux,macos,windows
+/.idea
