--- a/IncomeTracer/Properties/launchSettings.json
+++ b/IncomeTracer/Properties/launchSettings.json
@@ -4,17 +4,8 @@
       "http": {
         "commandName": "Project",
         "dotnetRunMessages": true,
-        "launchBrowser": true,
+        "launchBrowser": false,
         "applicationUrl": "http://localhost:5255",
-        "environmentVariables": {
-          "ASPNETCORE_ENVIRONMENT": "Development"
-        }
-      },
-      "https": {
-        "commandName": "Project",
-        "dotnetRunMessages": true,
-        "launchBrowser": true,
-        "applicationUrl": "https://localhost:7216;http://localhost:5255",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
